# husky

husky_navigation/: CMakeLists.txt  package.xml
husky_navigation/launch/: amcl_PLICP.launch  amcl_demo.launch  gmapping_edit.launch  my_gmapping_demo.launch
husky_navigation/maps/: 20240728_test1_husky_b1_05map.yaml  20241110_vive_mapper_simu_map_2.5.pgm  20241110_vive_mapper_simu_map_2.5.yaml  b1_closed_d_ideal_map_1.25.yaml  b1_closed_d_ideal_map_1.yaml  b1_closed_d_ideal_map_10.pgm  b1_closed_d_ideal_map_10.yaml  b1_closed_d_ideal_map_2.5.pgm  b1_closed_d_ideal_map_2.5.yaml  b1_closed_d_ideal_map_5.pgm  b1_closed_d_ideal_map_5.yaml  husky_gmap_20240803_manual_b1_1.25map.yaml  husky_gmap_20240803_manual_b1_2.5map.pgm  husky_gmap_20240803_manual_b1_2.5map.yaml  husky_gmap_20240803_manual_b1_5map.pgm  husky_gmap_20240803_manual_b1_5map.yaml  husky_gmap_20240803_test1_b1_2.5map.pgm  husky_gmap_20240803_test1_b1_2.5map.yaml  husky_gmap_20240804_test1_b1_1.25map.yaml  husky_gmap_20240804_test1_b1_2.5map.pgm  husky_gmap_20240804_test1_b1_2.5map.yaml  husky_gmap_20240804_test1_b1_5map.pgm  husky_gmap_20240804_test1_b1_5map.yaml  husky_gmap_20240928_b1_closed_10map.pgm  husky_gmap_20240928_b1_closed_10map.yaml  husky_gmap_20240928_b1_closed_2.5map.pgm  husky_gmap_20240928_b1_closed_2.5map.yaml  husky_gmap_20240928_b1_closed_5map.pgm  husky_gmap_20240928_b1_closed_5map.yaml  map_1.25_test1.yaml  map_10_test1.pgm  map_10_test1.yaml  map_2.5_test1.pgm  map_2.5_test1.yaml  map_2.5_test2.yaml  map_5_test1.pgm  map_5_test1.yaml
husky_navigation/src/: gt_2D.cpp
(+12 files in other folders)
